fixed grid in footer to be responsive and shift sections

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -10,8 +10,8 @@ footer {
   }
   .wrapper {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 50px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-gap: 20px;
   }
   h3 {
     text-transform: capitalize;
