--- a/styles/styles.css
+++ b/styles/styles.css
@@ -795,8 +795,8 @@ footer a {
 }
 footer .wrapper {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 50px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 20px;
 }
 footer h3 {
   text-transform: capitalize;
